--- a/style.css
+++ b/style.css
@@ -1,17 +1,22 @@
-.site-title{
-    padding: 50px 0;
-}
-.login-area{
-    margin-top: 50px;
-    border-radius: 15px;
-    box-shadow: 5px 5px 10px gray;
-    padding: 50px;
-}
-#transection-area{
-    display: none;
+body{
     padding: 100px;
 }
-.diposit{
+.submit-area{
+    margin-top: 50px;
+    padding: 40px;
+    border-radius: 10px;
+    box-shadow: 5px 5px 10px gray;
+}
+#transaction-area{
+    display: none;
+}
+.status{
+    margin: 0 20px;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
+}
+.deposit{
     background-color: slateblue;
 }
 .withdraw{
@@ -19,10 +24,4 @@
 }
 .balance{
     background-color: orange;
-}
-.status{
-    padding: 20px;
-    border-radius: 10px;
-    color: #fff;
-
 }
